tests/expr/right_shift_negative_value/stderr.golden
error: negative value of right shift -9
bus.fbd +2:26
   |
 2 |   c config; width = 1 >> -9
   |                          ^^
